# agentic-qna

./: README.md  agents.py  app.py  app_streamlit.py  cli.py  docker-compose.yaml  pyproject.toml
modules/: pipeline.py  qna.py  vector_db.py
server/: client-stdio.py  llm_monitoring.py  pdf_extractor.py  pdf_processing_server.py  requirements.txt  summarizer_qna_server.py  tracing.py  vector_store.py
